Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Gaming Portal</title>
+    <title>Gaming Portal</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;700;800&family=JetBrains+Mono:wght@400;600;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -156,11 +156,11 @@
     <div class="decoration blob-2"></div>
 
     <div class="container">
-        <h1>Gaming Portal</h1>
-        <p class="subtitle">Cloud Computing Assignment • Objective 01</p>
+        <h1>Ayushman Das</h1>
+        <p class="subtitle">Gaming in Cloud Assignment</p>
 
         <div class="card">
-            <span class="game-title">&lt;Dreamy Jumper /&gt;</span>
+            <span class="game-title">&lt;Neon Runner /&gt;</span>
             <p>An endless platformer developed in HTML5 Canvas.</p>
             <p style="margin-top: 10px; font-size: 0.9rem; opacity: 0.7;">Hosted via AWS S3 Static Website Hosting</p>
             
